cabal-version:      2.4
name:               bepa
version:            0.1.0.0


synopsis: My solution for the technical exercise.
author:             Renate Eilers
maintainer:         renate.eilers@tuwien.ac.at

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Tree

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: TemplateHaskell
    build-depends:    base ^>=4.14.2.0, lens
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
    type:           exitcode-stdio-1.0    
    main-is:        Main.hs
    other-modules:  Tree
    build-depends:  base ^>=4.14.2.0, bepa, QuickCheck, lens, text, tasty, tasty-quickcheck
    hs-source-dirs: tests, src